--- a/framework/index.html
+++ b/framework/index.html
@@ -1,14 +1,59 @@
+</body>
+</html>
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Documentación del Framework</title>
-	<link rel="stylesheet" href="assets/css/framework.css">
-	<link rel="stylesheet" href="assets/css/docs.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+	<link rel="stylesheet" href="assets/css/docs.css" media="all">
+    <link rel = "preconnect" href = "https://fonts.googleapis.com">
+    <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
+    <link href = "https: //fonts.googleapis.com/css2? family = Libre + Baskerville & display = swap "rel =" stylesheet ">
 </head>
+
 <body>
 
+
+    <header class="site-neader">
+
+        <nav class="site-navigation">
+            <a href="../framework/index.html">Inicio</a>
+            <a href="../quienes somos/index.html">Quienes somos</a>
+            <a href="../productos/index.html">Productos</a>
+            <a href="../contacto/index.html">Contacto</a>
+        </nav>
+		<section class="textos-header">
+            <h1>Coffee Time</h1>
+            <h2>uwu uwu uwu uwu uwu</h2>
+        </section>
+    </header>
+
+    
+
+    <main>
+        <section class="contenedor-dulces">
+            <h2 class="titulo">Selección de dulces</h2>
+        </section>
+    </main>
+
+    <footer>
+        <div class="contenedor-footer">
+            <div class="content-foo">
+                <h4>Teléfono</h4>
+                <p>+56992175998</p> 
+            </div>
+            <div class="content-foo">
+                <h4>Email</h4>
+                <p>pasteleriawena@gmail.com</p> 
+            </div>
+            <div class="content-foo">
+                <h4>Instagram</h4>
+                <p>@Pastelesdepana</p> 
+            </div>
+        </div>
+        <h2 class="titulo-final">&copy; Pasteleria uwu | wena wena </h2>
+    </footer>
 </body>
 </html>
