--- a/framework/index.html
+++ b/framework/index.html
@@ -11,22 +11,21 @@
     <link rel = "preconnect" href = "https://fonts.googleapis.com">
     <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
     <link href = "https: //fonts.googleapis.com/css2? family = Libre + Baskerville & display = swap "rel =" stylesheet ">
+ 
 </head>
 
 <body>
 
-
     <header class="site-neader">
-
         <nav class="site-navigation">
-            <a href="../framework/index.html">Inicio</a>
-            <a href="../quienes somos/index.html">Quienes somos</a>
-            <a href="../productos/index.html">Productos</a>
-            <a href="../contacto/index.html">Contacto</a>
+            <a href="../framework/index.html"><strong>Inicio</strong></a>
+            <a href="../quienes somos/index.html"><strong>Quienes somos</strong></a>
+            <a href="../productos/index.html"><strong>Productos</strong></a>
+            <a href="../contacto/index.html"><strong>Contacto</strong></a>
         </nav>
 		<section class="textos-header">
-            <h1>Coffee Time</h1>
-            <h2>uwu uwu uwu uwu uwu</h2>
+            <h1><strong>Coffee Time</strong> </h1>
+            <h2>Café que hace flotar las artes</h2>
         </section>
     </header>
 
