--- a/quienes somos/index.html
+++ b/quienes somos/index.html
@@ -6,23 +6,57 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Sitio 1</title>
 	<link rel="stylesheet" href="../framework/assets/css/framework.css">
-	<link rel="stylesheet" href="css/sitio-1.css">
+	<link rel="stylesheet" href="css/Quienes somos.css">
 </head>
 
 <body>
 
-	<header class="site-neader">
+    <header class="site-neader">
         <nav class="site-navigation">
-            <a href="../framework/index.html">Inicio</a>
-            <a href="../quienes somos/index.html">Quienes somos</a>
-            <a href="../productos/index.html">Productos</a>
-            <a href="../contacto/index.html">Contacto</a>
+            <a href="../framework/index.html"><strong>Inicio</strong></a>
+            <a href="../quienes somos/index.html"><strong>Quienes somos</strong></a>
+            <a href="../productos/index.html"><strong>Productos</strong></a>
+            <a href="../contacto/index.html"><strong>Contacto</strong></a>
         </nav>
-        <section class="textos-header">
-            <h1>Nombre empresa</h1>
-            <h2>Eslogan</h2>
+		<section class="textos-header">
+            <h1>Coffee Time</h1>
+            <h2>Café que hace flotar las artes</h2>
         </section>
     </header>
+
+
+
+
+    <main>
+    <P class="Parrafo-main">
+        esxrdctfvgybhjunk dcftvgybhunj rdtfvygbhunjk rtcfvygbhj dfgvhbjk 
+        rtfygubhinj tryubhnij retfygbuhnj retfygubhjk rtcfyvgbhjk rtcfvygbhj
+        tcyubinom
+        rtcfyvgbhjktfcvghbjk
+        tyvghbjk
+        ycvguhbjkfcygvhbkj
+        fghjk
+    </P>
+    </main>
+
+
+    <footer>
+        <div class="contenedor-footer">
+            <div class="content-foo">
+                <h4>Teléfono</h4>
+                <p>+56992175998</p> 
+            </div>
+            <div class="content-foo">
+                <h4>Email</h4>
+                <p>pasteleriawena@gmail.com</p> 
+            </div>
+            <div class="content-foo">
+                <h4>Instagram</h4>
+                <p>@Pastelesdepana</p> 
+            </div>
+        </div>
+        <h2 class="titulo-final">&copy; Pasteleria uwu | wena wena </h2>
+    </footer>
 
 
 </body>
