--- a/productos/index.html
+++ b/productos/index.html
@@ -11,16 +11,17 @@
 
   <header class="site-neader">
     <nav class="site-navigation">
-        <a href="../framework/index.html"><strong>Inicio</strong></a>
-        <a href="../quienes somos/index.html"><strong>Quienes somos</strong></a>
-        <a href="../productos/index.html"><strong>Productos</strong></a>
-        <a href="../contacto/index.html"><strong>Contacto</strong></a>
-    </nav>
+      <a href="../framework/index.html"><strong>Inicio</strong></a>
+      <a href="../quienes somos/index.html"><strong>Quienes somos</strong></a>
+      <a href="../productos/index.html"><strong>Productos</strong></a>
+      <a href="../contacto/index.html"><strong>Contacto</strong></a>
+  </nav>
 <section class="textos-header">
-        <h1>Coffee Time</h1>
+        <h1><strong>Coffee Time</strong> </h1>
         <h2>Café que hace flotar las artes</h2>
     </section>
 </header>
+
 
     <main>
                           
@@ -86,8 +87,6 @@
                 <p>Capuccino </p>
             </section>
          </article>
-   
-   
        </div>
 
     
