--- a/quienes somos/index.html
+++ b/quienes somos/index.html
@@ -13,13 +13,13 @@
 
     <header class="site-neader">
         <nav class="site-navigation">
-            <a href="../framework/index.html"><strong>Inicio</strong></a>
-            <a href="../quienes somos/index.html"><strong>Quienes somos</strong></a>
-            <a href="../productos/index.html"><strong>Productos</strong></a>
-            <a href="../contacto/index.html"><strong>Contacto</strong></a>
-        </nav>
-		<section class="textos-header">
-            <h1>Coffee Time</h1>
+          <a href="../framework/index.html"><strong>Inicio</strong></a>
+          <a href="../quienes somos/index.html"><strong>Quienes somos</strong></a>
+          <a href="../productos/index.html"><strong>Productos</strong></a>
+          <a href="../contacto/index.html"><strong>Contacto</strong></a>
+      </nav>
+    <section class="textos-header">
+            <h1><strong>Coffee Time</strong> </h1>
             <h2>Café que hace flotar las artes</h2>
         </section>
     </header>
