--- a/contacto/index.html
+++ b/contacto/index.html
@@ -21,6 +21,19 @@
             <h2>Café que hace flotar las artes</h2>
         </section>
     </header>
+    <main>
+        <form action=" enviar.php" method="post">
+            <h3>¡Contáctanos!</h3>
+            <p class="texto">Si deseas hacer alguna pregunta, reclamo o sugerencia ingresa tus datos y nos comunicaremos a la brevedad.</p>
+            <p class="horario"> <strong>Horario de atención: Lunes a Viernes 9:00 - 20:00</strong></p>
+            <input type= "text" name="Nombre" placeholder= "Nombre" required> 
+            <input  type= "text" name="Correo" placeholder= "Correo" required>
+            <input  type= "text" name="Telefono" placeholder= "Teléfono" required> 
+            <textarea name="mensaje" placeholder=" Escriba aquí su mensajes" required></textarea>
+            <input type="submit" value="ENVIAR" id="boton">
+        </form>
+           
+    </main>
 
 
     <footer>
