--- a/framework/index.html
+++ b/framework/index.html
@@ -26,12 +26,21 @@
             <h1><strong>Coffee Time</strong> </h1>
             <h2>Café que hace flotar las artes</h2>
         </section>
-        
+
+   
     </header>
     <main>
         <section class="contenedor-dulces">
             <h2 class="titulo">Productos Destacados</h2>
         </section>
+        <div class="slider-frame">
+            <ul>
+                <li><img src="../fotografias/bebidas4.jpg"  alt="" ></li>
+                <li><img src="../fotografias/pasteles3.jpeg" alt=""></li>
+                <li><img src="../fotografias/pasteles11.jpeg" alt=""></li>
+                <li><img src="../fotografias/cafe3.jpg" alt=""></li>
+            </ul>
+        </div>
     </main>
     <footer>
         <div class="contenedor-footer">
