--- a/framework/index.html
+++ b/framework/index.html
@@ -31,7 +31,7 @@
     </header>
     <main>
         <section class="contenedor-dulces">
-            <h2 class="titulo">Productos Destacados</h2>
+            <h3 class="titulo">Productos Destacados</h3>
         </section>
         <div class="slider-frame">
             <ul>
@@ -50,14 +50,14 @@
             </div>
             <div class="content-foo">
                 <h4>Email</h4>
-                <p>pasteleriawena@gmail.com</p> 
+                <p>coffeetime@gmail.com</p> 
             </div>
             <div class="content-foo">
                 <h4>Instagram</h4>
-                <p>@Pastelesdepana</p> 
+                <p>@Coffee Time</p> 
             </div>
         </div>
-        <h2 class="titulo-final">&copy; Pasteleria uwu | wena wena </h2>
+        <h2 class="titulo-final">&copy; Coffee Time | Café que hace flotar las artes </h2>
     </footer>
 
 
