--- a/productos/index.html
+++ b/productos/index.html
@@ -17,7 +17,7 @@
       <a href="../contacto/index.html"><strong>Contacto</strong></a>
   </nav>
 <section class="textos-header">
-        <h1><strong>Coffee Time</strong> </h1>
+        <h1><strong>Productos</strong> </h1>
         <h2>Café que hace flotar las artes</h2>
     </section>
 </header>
@@ -102,7 +102,7 @@
       <article class="producto">
         <img src="../fotografias/bebidas2.jpg">
          <section>
-             <p>Té de aveganas y limon </p>
+             <p>Té de avellanas y limon </p>
          </section>
       </article>
 
@@ -230,14 +230,14 @@
           </div>
           <div class="content-foo">
               <h4>Email</h4>
-              <p>pasteleriawena@gmail.com</p> 
+              <p>coffeetime@gmail.com</p> 
           </div>
           <div class="content-foo">
               <h4>Instagram</h4>
-              <p>@Pastelesdepana</p> 
+              <p>@Coffee Time</p> 
           </div>
       </div>
-      <h2 class="titulo-final">&copy; Pasteleria uwu | wena wena </h2>
+      <h2 class="titulo-final">&copy; Coffee Time | Café que hace flotar las artes </h2>
   </footer>
 
 </body>
