--- a/contacto/index.html
+++ b/contacto/index.html
@@ -44,14 +44,14 @@
             </div>
             <div class="content-foo">
                 <h4>Email</h4>
-                <p>pasteleriawena@gmail.com</p> 
+                <p>coffeetime@gmail.com</p> 
             </div>
             <div class="content-foo">
                 <h4>Instagram</h4>
-                <p>@Pastelesdepana</p> 
+                <p>@coffeetime</p> 
             </div>
         </div>
-        <h2 class="titulo-final">&copy; Pasteleria uwu | wena wena </h2>
+        <h2 class="titulo-final">&copy; Coffee Time | Café que hace flotar las artes </h2>
     </footer>
 
     
