--- a/contacto/index.html
+++ b/contacto/index.html
@@ -40,7 +40,7 @@
         <div class="contenedor-footer">
             <div class="content-foo">
                 <h4>Teléfono</h4>
-                <p>+56992175998</p> 
+                <p>+56932175978</p> 
             </div>
             <div class="content-foo">
                 <h4>Email</h4>
@@ -48,7 +48,7 @@
             </div>
             <div class="content-foo">
                 <h4>Instagram</h4>
-                <p>@coffeetime</p> 
+                <p>@CoffeeTime</p> 
             </div>
         </div>
         <h2 class="titulo-final">&copy; Coffee Time | Café que hace flotar las artes </h2>
