--- a/framework/index.html
+++ b/framework/index.html
@@ -11,11 +11,32 @@
     <link rel = "preconnect" href = "https://fonts.googleapis.com">
     <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
     <link href = "https: //fonts.googleapis.com/css2? family = Libre + Baskerville & display = swap "rel =" stylesheet ">
- 
+    <link rel = "preconnect" href = "https://fonts.googleapis.com">
+    <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
+    <link href = "https: //fonts.googleapis.com/css2? family = IM + Fell + Double + Pica &familia = Lato & display = swap "rel =" stylesheet ">
+    <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+ 
     <header class="site-neader">
+
+        <div class="top-header">
+        <div class="container">
+            <p>
+                <i class="fa fa-phone" > 
+                </i>
+                 +56957753650 | 
+                <i class="fa fa-envelope"> 
+                 coffeetime@gmail.com |
+                </i>
+                <i class="fa fa-home">
+                 Manuel Antonio Matta 12, Viña del Mar, Valparaíso
+                </i>
+            </p>
+
+
+        </div>
         <nav class="site-navigation">
             <a href="../framework/index.html"><strong>Inicio</strong></a>
             <a href="../quienes somos/index.html"><strong>Quienes somos</strong></a>
