--- a/framework/index.html
+++ b/framework/index.html
@@ -6,13 +6,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Inicio</title>
 	<link rel="stylesheet" href="assets/css/docs.css" media="all">
     <link rel = "preconnect" href = "https://fonts.googleapis.com">
     <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
     <link href = "https: //fonts.googleapis.com/css2? family = Libre + Baskerville & display = swap "rel =" stylesheet ">
     <link rel = "preconnect" href = "https://fonts.googleapis.com">
     <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
+    <link rel="shortcut icon" href="" type="image/x-icon">
     <link href = "https: //fonts.googleapis.com/css2? family = IM + Fell + Double + Pica &familia = Lato & display = swap "rel =" stylesheet ">
     <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
 </head>
