--- a/productos/index.html
+++ b/productos/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="css/Productos.css">
   <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <script src="/productos/js/productors.js"></script>
 </head>
 <body>
 
@@ -76,6 +77,7 @@
                 <div class="card_text">
                   <p><span class="note">Seasonal</span></p>
                   <p>Una bebida hecha con expreso, esencia o sirope de chocolate </p>
+                  <button onclick="haceAlgo()"> boton </button>
                 </div>
 
               </div>
