--- a/productos/index.html
+++ b/productos/index.html
@@ -51,8 +51,9 @@
               <div class="card_content">
                 <h2 class="card_title">Capuccino &#x2022; $2.100</h2>
                 <div class="card_text ">
-                  <p><span class="note">Seasonal</span></p>
-                  <p> Bebida caliente a base de espresso, con leche evaporizada y espolvoreado con cacao</p>
+                  <p><span class="note">Más Comprado</span></p>
+                  <p> Bebida caliente a base de espresso, con leche evaporizada y espolvoreado con cacao.</p>
+                  <button type="button" id="button--alert" class="button--alert">Ver Más</button>
                 </div>
           </li>
 
@@ -60,10 +61,11 @@
             <div class="card truncate" id="figBerryPlate">
               <div><img  class="card_image" src="../fotografias/bebidas3.jpg" alt="A side view of a plate of figs and berries. "></div>
               <div class="card_content">
-                <h2 class="card_title"> Té  (Variedades)&#x2022; $1.200</h2>
+                <h2 class="card_title"> Té  (Variedades) &#x2022; $1.200</h2>
                 <div class="card_text">
-                  <p><span class="note">Seasonal</span></p>
-                  <p> Ceylon - Darjeeling, Earl Grey, English Breakfast, Té verde, Té rojo, Té Berries, Menta, Manzanilla, Lima-Limón, Chai</p>
+                  <p><span class="note">Nuevos Sabores</span></p>
+                  <p> Ceylon - Darjeeling, Earl Grey, English Breakfast, Té verde, Té rojo, Té Berries, Menta, Manzanilla, Lima-Limón, Chai...</p>
+                  <button type="button" class="button--confirm">Ver Más</button>
                 </div>
               </div>
             </div>
@@ -71,15 +73,14 @@
 
           <li class="cards_item">
             <div class="card truncate" id="figBerryPlate">
-              <div><img  class="card_image" src="../fotografias/mocachino.jpg" alt="A side view of a plate of figs and berries. "></div>
+              <div><img  class="card_image" src="../fotografias/mocaccino2.jpg" alt="A side view of a plate of figs and berries. "></div>
               <div class="card_content">
                 <h2 class="card_title"> Mocaccino &#x2022; $2.200</h2>
                 <div class="card_text">
-                  <p><span class="note">Seasonal</span></p>
-                  <p>Una bebida hecha con expreso, esencia o sirope de chocolate </p>
-                  <button onclick="haceAlgo()"> boton </button>
+                  <p><span class="note">Recomendado</span></p>
+                  <p>Una bebida hecha con expreso, esencia o sirope de chocolate. </p>
+                  <button type="button" class="button--ok">Ver Más</button>
                 </div>
-
               </div>
             </div>
           </li>
@@ -88,11 +89,12 @@
             <div class="card truncate" id="figBerryPlate">
               <div><img  class="card_image" src="../fotografias/cafe-helado.jpeg" alt="A side view of a plate of figs and berries. "></div>
               <div class="card_content">
-                <h2 class="card_title">Cafe Helado&#x2022; $2.100</h2>
+                <h2 class="card_title">Café Helado &#x2022; $2.100</h2>
                 <div class="card_text">
-                  <p><span class="note">Seasonal</span></p>
-                  <p>pauli uwu — hoy a las 0:40
+                  <p><span class="note">De Temporada</span></p>
+                  <p>
                     Una deliciosa mezcla de café, helado de vainilla y crema chantilly que en conjunto crean una combinación refrescante y llena de energía.</p>
+                    <button type="button" class="button--ready">Ver Más</button>
                 </div>
               </div>
             </div>
@@ -102,10 +104,11 @@
             <div class="card truncate" id="figBerryPlate">
               <div><img  class="card_image" src="../fotografias/medialunas.jpg" alt="A side view of a plate of figs and berries. "></div>
               <div class="card_content">
-                <h2 class="card_title">Medialuna&#x2022; $700</h2>
+                <h2 class="card_title">Medialuna &#x2022; $700</h2>
                 <div class="card_text">
-                  <p><span class="note">Seasonal</span></p>
-                  <p>Crocante bollo hojaldrado neutro</p>
+                  <p><span class="note">Más Comprado</span></p>
+                  <p>Crocante bollo hojaldrado neutro.</p>
+                  <button type="button" class="button--ya">Ver Más</button>
                 </div>
               </div>
             </div>
@@ -118,11 +121,11 @@
                 <img  class="card_image" src="../fotografias/pasteles12.jpeg" alt="a Reuben sandwich on wax paper. ">
               </div>
               <div class="card_content">
-                <h2 class="card_title">Macarrones (2 unidades) &#x2022; $900</h2>
+                <h2 class="card_title">Macarrones &#x2022; $900</h2>
                 <div class="card_text">
-                  <p><span class="note">Seasonal</span></p>
-                  <p>pastelillo redondo, crujiente por fuera y blando por dentro, hecho con una pasta de almendras trituradas, azúcar y claras de huevo.
-                  </p>
+                  <p><span class="note">Nuevo</span></p>
+                  <p>Pastelillo redondo, crujiente por fuera y blando por dentro, hecho con una pasta de almendras trituradas, azúcar y claras de huevo. </p>
+                  <button type="button" class="button--listo">Ver Más</button>
                 </div>
               
               </div>
@@ -135,10 +138,11 @@
               <div class="card_content">
                 <h2 class="card_title"> Donas Rellenas &#x2022; $1.000</h2>
                 <div class="card_text">
-                  <p><span class="note">Seasonal</span></p>
+                  <p><span class="note">Especial</span></p>
                   <p>Chocolate </p>
                   <p> Dulce de leche</p>
-                  <p> Oreo (Rellena de vainilla y cubierta de galleta oreo)</p>
+                  <p> Oreo (Rellena de vainilla).</p>
+                  <button type="button" class="button--listo2">Ver Más</button>
                 </div>
               </div>
             </div>
@@ -150,10 +154,11 @@
               <div class="card_content">
                 <h2 class="card_title">    Muffin &#x2022; $1.600</h2>
                 <div class="card_text">
-                  <p><span class="note">Seasonal</span></p>
+                  <p><span class="note">Especial</span></p>
                   <p> Chocolate Chips</p>
                   <p>Arándano Frambuesa </p>
                   <p>Zanahoria Nuez</p>
+                  <button type="button" class="button--listo3">Ver Más</button>
                 </div>
               </div>
             </div>
@@ -162,13 +167,13 @@
             <div class="card truncate" id="figBerryPlate">
               <div><img  class="card_image" src="../fotografias/cheesecake.jpg" alt="A side view of a plate of figs and berries. "></div>
               <div class="card_content">
-                <h2 class="card_title">Porción de Cheesecake &#x2022; $2.900</h2>
+                <h2 class="card_title">Cheesecake &#x2022; $6.000</h2>
                 <div class="card_text">
-                  <p><span class="note">Seasonal</span></p>
+                  <p><span class="note">Más Vendido</span></p>
                   <p> Frutos del Bosque</p>
                   <p>Maracuyá </p>
-
-
+                  <p>Chococlate y nuez</p>
+                  <button type="button" class="button--listo4">Ver Más</button>
                 </div>
               </div>
             </div>
