sitio de documentacion
sobre el proyecto y sus componentes

--- a/productos/index.html
+++ b/productos/index.html
@@ -9,6 +9,7 @@
   <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <script src="/productos/js/productors.js"></script>
+  
 </head>
 <body>
 
@@ -30,6 +31,7 @@
 
       </div>
     <nav class="site-navigation">
+      <a href="../documentacion/documentacion.html"><strong>Documentación</strong></a>
       <a href="../framework/index.html"><strong>Inicio</strong></a>
       <a href="../quienes somos/index.html"><strong>Quienes somos</strong></a>
       <a href="../productos/index.html"><strong>Productos</strong></a>
