--- a/contacto/index.html
+++ b/contacto/index.html
@@ -29,6 +29,7 @@
 
             </div>
         <nav class="site-navigation">
+          <a href="../documentacion/documentacion.html"><strong>Documentación</strong></a>
           <a href="../framework/index.html"><strong>Inicio</strong></a>
           <a href="../quienes somos/index.html"><strong>Quienes somos</strong></a>
           <a href="../productos/index.html"><strong>Productos</strong></a>
