--- a/framework/index.html
+++ b/framework/index.html
@@ -7,10 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
-    
-
     <link rel="shortcut icon" href="../fotografias/coffeetimelogo.png" type="image/x-icon">
-
 	<link rel="stylesheet" href="assets/css/docs.css" media="all">
     <link rel = "preconnect" href = "https://fonts.googleapis.com">
     <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
@@ -18,7 +15,7 @@
     <link rel = "preconnect" href = "https://fonts.googleapis.com">
     <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
     <link rel="shortcut icon" href="" type="image/x-icon">
-    <link href = "https: //fonts.googleapis.com/css2? family = IM + Fell + Double + Pica &familia = Lato & display = swap "rel =" stylesheet ">
+    <link href = "https: //fonts.googleapis.com/css2? family = IM + Fell + Double + Pica &familia = Lato & display = swap "rel ="stylesheet ">
     <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
@@ -44,6 +41,7 @@
 
         </div>
         <nav class="site-navigation">
+            <a href="../documentacion/documentacion.html"><strong>Documentación</strong></a>
             <a href="../framework/index.html"><strong>Inicio</strong></a>
             <a href="../quienes somos/index.html"><strong>Quienes somos</strong></a>
             <a href="../productos/index.html"><strong>Productos</strong></a>
