--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link rel="stylesheet"  href= "Pagina principal/docs.css"all>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
-    <link rel="shortcut icon" href="../fotografias/coffeetimelogo.png" type="image/x-icon">
-	<link rel="stylesheet" href="../proyecto/framework/assets/css/docs.css" media="all">
+  
     <link rel = "preconnect" href = "https://fonts.googleapis.com">
     <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
     <link href = "https: //fonts.googleapis.com/css2? family = Libre + Baskerville & display = swap "rel =" stylesheet ">
     <link rel = "preconnect" href = "https://fonts.googleapis.com">
     <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
-    <link rel="shortcut icon" href="" type="image/x-icon">
+ 
     <link href = "https: //fonts.googleapis.com/css2? family = IM + Fell + Double + Pica &familia = Lato & display = swap "rel ="stylesheet ">
     <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -36,11 +36,11 @@
             </p>
         </div>
         <nav class="site-navigation">
-            <a href="../proyecto/documentacion/documentacion.html"><strong>Documentación</strong></a>
-            <a href="../framework/index.html"><strong>Inicio</strong></a>
-            <a href="../proyecto/quienes somos/index.html"><strong>Quienes somos</strong></a>
-            <a href="../proyecto/productos/index.html"><strong>Productos</strong></a>
-            <a href="../proyecto/contacto/index.html"><strong>Contacto</strong></a>
+            <a href="documentacion/style.css"><strong>Documentación</strong></a>
+            <a href="index.html"><strong>Inicio</strong></a>
+            <a href="quienes somos/index.html"><strong>Quienes somos</strong></a>
+            <a href="productos/index.html"><strong>Productos</strong></a>
+            <a href="contacto/index.html"><strong>Contacto</strong></a>
         </nav>
 		<section class="textos-header">
             <h1><strong>Coffee Time</strong> </h1>
@@ -54,7 +54,7 @@
         <div class="contenedor-texto">
             <div class="caja">
                 <article> Hoy podemos decir que somos una de las pastelerías más grandes y exitosas del mercado. Hemos crecido gracias al tesón y empuje familiar, nunca como socios. Actualmente tenemos más de cien empleados, los que permiten que nuestra empresa sea capaz de cumplir con las demandas de nuestra gran clientela conservando las recetas de los inicios e integrando la modernidad en motivos y decoraciones.</article>
-                <article>  <img src="../proyecto/fotografias/pastelinicio.jpeg" alt="pastel" sizes="auto" srcset=""> </article>
+                <article>  <img src="fotografias/pastelinicio2.jpeg" alt="pastel" sizes="auto" srcset=""> </article>
         </div>
 </section>
 </center>
@@ -63,15 +63,15 @@
         </section>
         <div class="slider-frame">
             <ul>
-                <li><img src="../proyecto/fotografias/carouselmuffin.jpeg"  alt="" ></li>
-                <li><img src="../proyecto/fotografias/carousel1.jpeg" alt=""></li>
-                <li><img src="../proyecto/fotografias/maracuya.jpg" alt=""></li>
-                <li><img src="../proyecto/fotografias/pasteles2.jpg" alt=""></li>
+                <li><img src="fotografias/carouselmuffin.jpeg"  alt="" ></li>
+                <li><img src="fotografias/carousel1.jpeg" alt=""></li>
+                <li><img src="fotografias/maracuya.jpg" alt=""></li>
+                <li><img src="fotografias/pasteles2.jpg" alt=""></li>
             </ul>
         </div>  
         <div class="cards">
             <div class="card">
-                <img src="../proyecto/fotografias/opinion1.jpg" alt="">
+                <img src="fotografias/opinion1.jpg" alt="">
                 <div class="contenido-texto-card">
                     <h4>Gonzalo Leiva</h4>
                     <p>Esta es una pastelería y cafetería, con productos de buena calidad, mucho público.
@@ -79,14 +79,14 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../proyecto/fotografias/opinion2.jpg" alt="">
+                <img src="fotografias/opinion2.jpg" alt="">
                 <div class="contenido-texto-card">
                     <h4>José Pizarro</h4> 
                     <p>El servicio y la pastelería es de primer nivel. Los materiales que usan para trabajar se nota que son muy buenos. Su gente muy amable y dispuesta a explicar que lleva cada pastel o torta. Felicitaciones.</p>
                 </div>
             </div>
             <div class="card">
-                <img src="../proyecto/fotografias/opinion3.jpg" alt="">
+                <img src="fotografias/opinion3.jpg" alt="">
                 <div class="contenido-texto-card">
                     <h4>Emilia Véliz</h4>
                     <p> 
