--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </p>
         </div>
         <nav class="site-navigation">
-            <a href="documentacion/style.css"><strong>Documentación</strong></a>
+            <a href="documentacion/documentacion.html"><strong>Documentación</strong></a>
             <a href="index.html"><strong>Inicio</strong></a>
             <a href="quienes somos/index.html"><strong>Quienes somos</strong></a>
             <a href="productos/index.html"><strong>Productos</strong></a>
