--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         </div>
         <nav class="site-navigation">
             <a href="documentacion/documentacion.html"><strong>Documentación</strong></a>
+            <a href="documentacion/documentacion.html"><strong>Documentación</strong></a>
             <a href="index.html"><strong>Inicio</strong></a>
             <a href="quienes somos/index.html"><strong>Quienes somos</strong></a>
             <a href="productos/index.html"><strong>Productos</strong></a>
